--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 6e1dd799
-	trim = 
-	trimbase = 
+	base = a5f525a3
+	trim = mobileye_560_660_msgs
+	trimbase = 6e1dd799
