--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 16444637
-	trim = 
-	trimbase = 
+	base = e150a1c2
+	trim = delphi_srr_msgs
+	trimbase = 16444637
