--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 50736db8
-	trim = 
-	trimbase = 
+	base = fa3eb03a
+	trim = delphi_mrr_msgs
+	trimbase = 50736db8
