--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 1f2ee7e4
-	trim = 
-	trimbase = 
+	base = d2090510
+	trim = ibeo_msgs
+	trimbase = 1f2ee7e4
