--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = b0afba19
-	trim = 
-	trimbase = 
+	base = 92ca1318
+	trim = neobotix_usboard_msgs
+	trimbase = b0afba19
