--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 346b273d
-	trim = 
-	trimbase = 
+	base = dcdb3a00
+	trim = delphi_esr_msgs
+	trimbase = 346b273d
