--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 87c0a6ce
-	trim = 
-	trimbase = 
+	base = eedbe227
+	trim = derived_object_msgs
+	trimbase = 87c0a6ce
