--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 117e5622
-	base = 1ead4ad5
-	trim = 
-	trimbase = 
+	base = 8ee9c36b
+	trim = kartech_linear_actuator_msgs
+	trimbase = 1ead4ad5
