--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/kartech_linear_actuator_msgs
-	previous = 
-	base = bbcda8e7
+	previous = bbcda8e7
+	base = c7cd507b
 	trim = 
 	trimbase = 
