--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/delphi_esr_msgs
-	previous = 
-	base = 34e6e04b
+	previous = 34e6e04b
+	base = dd9ef5e7
 	trim = 
 	trimbase = 
