--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/neobotix_usboard_msgs
-	previous = 
-	base = 92ca1318
+	previous = 92ca1318
+	base = 8a44832d
 	trim = 
 	trimbase = 
