--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/neobotix_usboard_msgs
-	previous = 
-	base = 78bf7208
+	previous = 78bf7208
+	base = e8bf0066
 	trim = 
 	trimbase = 
