--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ibeo_msgs
-	previous = 
-	base = d2090510
+	previous = d2090510
+	base = ddfd0be6
 	trim = 
 	trimbase = 
