--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ibeo_msgs
-	previous = 
-	base = 045a1845
+	previous = 045a1845
+	base = c0417f1b
 	trim = 
 	trimbase = 
