--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/delphi_srr_msgs
-	previous = 
-	base = 193aa04f
+	previous = 193aa04f
+	base = e242e735
 	trim = 
 	trimbase = 
