--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/derived_object_msgs
-	previous = 
-	base = 4211db86
+	previous = 4211db86
+	base = 4bea2885
 	trim = 
 	trimbase = 
