--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/mobileye_560_660_msgs
-	previous = 
-	base = dc7dfc26
+	previous = dc7dfc26
+	base = c18dab60
 	trim = 
 	trimbase = 
