--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/delphi_mrr_msgs
-	previous = 
-	base = fa3eb03a
+	previous = fa3eb03a
+	base = fd4301db
 	trim = 
 	trimbase = 
