--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/delphi_mrr_msgs
-	previous = 
-	base = 07de7929
+	previous = 07de7929
+	base = 9d2b7d06
 	trim = 
 	trimbase = 
