--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/derived_object_msgs
-	previous = 
-	base = eedbe227
+	previous = eedbe227
+	base = ac390ad4
 	trim = 
 	trimbase = 
