--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/derived_object_msgs
-	previous = 
-	base = b6ce9736
+	previous = b6ce9736
+	base = 8a942418
 	trim = 
 	trimbase = 
