--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/delphi_esr_msgs
-	previous = 
-	base = dcdb3a00
+	previous = dcdb3a00
+	base = e1a487e0
 	trim = 
 	trimbase = 
