--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/delphi_esr_msgs
-	previous = 
-	base = 125f94d4
+	previous = 125f94d4
+	base = 50b2cd67
 	trim = 
 	trimbase = 
