--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/delphi_mrr_msgs
-	previous = 
-	base = a65ba048
+	previous = a65ba048
+	base = 57c153fa
 	trim = 
 	trimbase = 
