--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/mobileye_560_660_msgs
-	previous = 
-	base = a5f525a3
+	previous = a5f525a3
+	base = 2f9c13f8
 	trim = 
 	trimbase = 
