--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/mobileye_560_660_msgs
-	previous = 
-	base = 435ae57a
+	previous = 435ae57a
+	base = d60b3fea
 	trim = 
 	trimbase = 
