--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/kartech_linear_actuator_msgs
-	previous = 
-	base = 8ee9c36b
+	previous = 8ee9c36b
+	base = b073746c
 	trim = 
 	trimbase = 
