--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/kartech_linear_actuator_msgs
-	previous = 
-	base = 0383a2bb
+	previous = 0383a2bb
+	base = ed4d1478
 	trim = 
 	trimbase = 
