--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ibeo_msgs
-	previous = 
-	base = 49f703c1
+	previous = 49f703c1
+	base = 955f19f4
 	trim = 
 	trimbase = 
