--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/delphi_srr_msgs
-	previous = 
-	base = e150a1c2
+	previous = e150a1c2
+	base = 7dade319
 	trim = 
 	trimbase = 
