--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/delphi_srr_msgs
-	previous = 
-	base = ee6a44d4
+	previous = ee6a44d4
+	base = 614aa763
 	trim = 
 	trimbase = 
