--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/neobotix_usboard_msgs
-	previous = 
-	base = 78558798
+	previous = 78558798
+	base = a367068f
 	trim = 
 	trimbase = 
